correct analysis run left